added some styling and the subscribe bar

--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
             </div>
         </div>
         <div class="bookings-bar">
-            <!-- <button class="dropdown-button">Date</button> -->
             <input type="date" class="dropdown-button">
-            <!-- <button class="dropdown-button">Time</button> -->
             <input type="time" class="dropdown-button">
-            <!-- <button class="dropdown-button">Party Size</button> -->
             <div class="dropdown">
-                <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+                <button onclick="myFunction()" class="dropbtn">Party Size</button>
                 <div id="myDropdown" class="dropdown-content">
                   <a href="#">2 people</a>
                   <a href="#">3 people</a>
@@ -57,6 +54,12 @@
                 </div>
               </div>
             <button class="book-button">Book a Table</button>
+        </div>
+        <div class="signup-bar">
+            <div id="signup-txt">Sign Up for News, Events and Much More!</div>
+            <input id="input-email" placeholder="Enter your email here*">
+            <button id="subscribe-btn">Subscribe Now</button>
+            <div id="tm-text">© 2023 by Punch Club.</div>
         </div>
 
     </body>
